dashboard-wip: figure widget rendering fixes
* prevent service stats widget from overflowing
* enable background color for site overview widget

CMK-26555

--- a/packages/cmk-frontend/src/themes/facelift/scss/_dashboard.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_dashboard.scss
@@ -860,7 +860,8 @@ div.stats_dashlet {
     }
 
     td {
-      padding: 3px;
+      padding: 3px 3px 0;
+      vertical-align: top;
     }
 
     td:last-child {
